// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramCard should render correctly for live 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-2 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6:hover .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:focus .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 {
  color: #006666;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
}

.emotion-9 {
  display: inline-block;
  width: 0.9375rem;
  height: 0.9375rem;
  vertical-align: -0.125rem;
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
}

@media (min-width: 25rem) {
  .emotion-9 {
    width: 1rem;
    height: 1rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-10 {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
  }
}

.emotion-11 {
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  padding: 0.5rem 0 0 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-17 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-17 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-19 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #006666;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-19 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-21>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-21>svg {
    fill: canvasText;
  }
}

.emotion-23 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-25 {
  padding-left: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          aria-labelledby="scheduleItem-1"
          class="focusIndicatorDisplayBlock emotion-6 emotion-7"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            id="scheduleItem-1"
            role="text"
          >
            <span
              role="text"
            >
              <span
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M16 4c6.6 0 12 5.4 12 12s-5.4 12-12 12S4 22.6 4 16 9.4 4 16 4zm0-4C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0z"
                    />
                    <circle
                      class="emotion-10"
                      cx="16"
                      cy="16"
                      r="8.5"
                    />
                  </svg>
                </span>
                <span
                  aria-hidden="true"
                  class="emotion-11"
                  dir="ltr"
                >
                  LIVE 
                </span>
              </span>
              <span
                class="emotion-12"
                lang="en-GB"
              >
                Listen Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="emotion-12"
            >
              , 14:54, 
            </span>
            <span
              class="emotion-14 emotion-15"
            >
              27 August 2019
            </span>
            <span
              class="emotion-12"
            >
              , Duration 30,00 
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-17 emotion-18"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="emotion-19 emotion-20"
    >
      <span
        class="emotion-21 emotion-22"
      >
        <svg
          aria-hidden="true"
          class="emotion-23 emotion-24"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="emotion-25 emotion-26"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          aria-hidden="true"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for next 1`] = `
.emotion-0 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-2 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #6E6E73;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-7 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-10 {
  color: #6E6E73;
  padding: 0.5rem 0 0 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-13 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-15 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  outline: 0.0625rem solid transparent;
  color: #B80000;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-15 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-17>svg {
  color: #B80000;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-17>svg {
    fill: canvasText;
  }
}

.emotion-19 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-21 {
  padding-left: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <span
          id="scheduleItem-1"
          role="text"
        >
          <span
            class="emotion-6"
          >
            Listen Next, 
          </span>
          <span
            aria-hidden="true"
            class="emotion-7 emotion-8"
            dir="ltr"
          >
            NEXT 
          </span>
          Could a computer ever create better art than a human?
          <span
            class="emotion-6"
          >
            , 14:54, 
          </span>
          <span
            class="emotion-10 emotion-11"
          >
            27 August 2019
          </span>
          <span
            class="emotion-6"
          >
            , Duration 30,00 
          </span>
        </span>
      </h3>
      <p
        class="emotion-13 emotion-14"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="emotion-15 emotion-16"
    >
      <span
        class="emotion-17 emotion-18"
      >
        <svg
          aria-hidden="true"
          class="emotion-19 emotion-20"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="emotion-21 emotion-22"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          aria-hidden="true"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for onDemand 1`] = `
.emotion-0 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-2 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6:hover .emotion-11 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:focus .emotion-11 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  color: #3F3F42;
  padding: 0.5rem 0 0 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-13 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-15 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-15 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-17>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-17>svg {
    fill: canvasText;
  }
}

.emotion-19 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-21 {
  padding-left: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          aria-labelledby="scheduleItem-1"
          class="focusIndicatorDisplayBlock emotion-6 emotion-7"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            id="scheduleItem-1"
            role="text"
          >
            <span
              class="emotion-8"
            >
              Listen, 
            </span>
            Could a computer ever create better art than a human?
            <span
              class="emotion-8"
            >
              , 14:54, 
            </span>
            <span
              class="emotion-10 emotion-11"
            >
              27 August 2019
            </span>
            <span
              class="emotion-8"
            >
              , Duration 30,00 
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-13 emotion-14"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="emotion-15 emotion-16"
    >
      <span
        class="emotion-17 emotion-18"
      >
        <svg
          aria-hidden="true"
          class="emotion-19 emotion-20"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="emotion-21 emotion-22"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          aria-hidden="true"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly in RTL 1`] = `
.emotion-0 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-2 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  color: #222222;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6:hover .emotion-11 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:focus .emotion-11 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  color: #3F3F42;
  padding: 0.5rem 0 0 0;
  display: inline-block;
  width: 100%;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-13 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #6E6E73;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-13 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    font-size: 0.8125rem;
    line-height: 1.25rem;
  }
}

.emotion-15 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1.125rem;
  padding: 0.5rem;
  background-color: #222222;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    font-size: 0.75rem;
    line-height: 1.125rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-15 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-17>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-17>svg {
    fill: canvasText;
  }
}

.emotion-19 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-21 {
  padding-right: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          aria-labelledby="scheduleItem-1"
          class="focusIndicatorDisplayBlock emotion-6 emotion-7"
          href="/arabic/articles/c1er5mjnznzo"
        >
          <span
            id="scheduleItem-1"
            role="text"
          >
            <span
              class="emotion-8"
            >
              استمع, 
            </span>
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="emotion-8"
            >
              , 13:54, 
            </span>
            <span
              class="emotion-10 emotion-11"
            >
              27 أغسطس/ آب 2019
            </span>
            <span
              class="emotion-8"
            >
              , المدة الزمنية 30،00 
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-13 emotion-14"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="emotion-15 emotion-16"
    >
      <span
        class="emotion-17 emotion-18"
      >
        <svg
          aria-hidden="true"
          class="emotion-19 emotion-20"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="emotion-21 emotion-22"
        datetime="PT30M"
        dir="rtl"
      >
        <span
          aria-hidden="true"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly without summary 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-2 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-4 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6:hover .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:focus .emotion-15 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 {
  color: #006666;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
}

.emotion-9 {
  display: inline-block;
  width: 0.9375rem;
  height: 0.9375rem;
  vertical-align: -0.125rem;
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
}

@media (min-width: 25rem) {
  .emotion-9 {
    width: 1rem;
    height: 1rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-10 {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
  }
}

.emotion-11 {
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  padding: 0.5rem 0 0 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-17 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #006666;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-17 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-17 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-19>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-19>svg {
    fill: canvasText;
  }
}

.emotion-21 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-23 {
  padding-left: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          aria-labelledby="scheduleItem-1"
          class="focusIndicatorDisplayBlock emotion-6 emotion-7"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            id="scheduleItem-1"
            role="text"
          >
            <span
              role="text"
            >
              <span
                class="emotion-8"
              >
                <span
                  class="emotion-9"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M16 4c6.6 0 12 5.4 12 12s-5.4 12-12 12S4 22.6 4 16 9.4 4 16 4zm0-4C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0z"
                    />
                    <circle
                      class="emotion-10"
                      cx="16"
                      cy="16"
                      r="8.5"
                    />
                  </svg>
                </span>
                <span
                  aria-hidden="true"
                  class="emotion-11"
                  dir="ltr"
                >
                  LIVE 
                </span>
              </span>
              <span
                class="emotion-12"
                lang="en-GB"
              >
                Listen Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="emotion-12"
            >
              , 14:54, 
            </span>
            <span
              class="emotion-14 emotion-15"
            >
              27 August 2019
            </span>
            <span
              class="emotion-12"
            >
              , Duration 30,00 
            </span>
          </span>
        </a>
      </h3>
    </div>
    <div
      class="emotion-17 emotion-18"
    >
      <span
        class="emotion-19 emotion-20"
      >
        <svg
          aria-hidden="true"
          class="emotion-21 emotion-22"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="emotion-23 emotion-24"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          aria-hidden="true"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;
